Add solidity function to exchange start, give symbol & name to star and send star with tets cases

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -21,6 +21,11 @@
     <br><br><button id="createStar" onclick="App.createStar()">Create Star</button>
     <br><br>
     <br>
+    <h1>Look up a Star</h1>
+    <br><label for="tokenID">Star ID:</label><input type="text" id="tokenID"></input>
+    <div id='getStartName'></div>
+    <br><br><button onclick="App.lookUp()">Look Up a Star</button>
+    <hr>
 
     <span id="status"></span>
 
